Changed main page text and styleing to use normal bootstrap. Fixed alignment issue with rows.

--- a/Invintory/ClientApp/src/components/NavMenu.css
+++ b/Invintory/ClientApp/src/components/NavMenu.css
@@ -14,8 +14,7 @@
 @media  {
     /* On large screens, convert the nav menu to a vertical sidebar */
     .navbar {
-        padding-bottom: 15px;
-        padding-top: 15px;
+     width:100%;
         /*width: calc(25% - 20px);*/
     }
     .navbar {
